--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {{define "title"}}Inicio | Biblioteca PUCE{{end}}
 
 {{define "content"}}
-<h2 class="mb-4 text-center">📚 Libros Disponibles</h2>
+<h2 class="mb-4 text-center">📚 Libros Disponibles abc</h2>
 
 <div class="text-center mb-4">
     <a href="/registrar" class="btn btn-primary me-2">Registrar Usuario</a>
